[package]
name = "topmesys"
description = "an embeddable topic-based messaging system"
repository = "https://github.com/sashakm/topmesys"
keywords = ["message", "pubsub", "broker", "event", "topic"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sashakm/topmesys"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dashmap = "6.2"
futures-util = "0.3"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
bytes = "1.12"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1.52", features = ["time"] }

[[bench]]
name = "broker"
harness = false
